--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,5 @@
-theme: jekyll-theme-minimal
+remote_theme: pages-themes/cayman@v.0.2.0
+plugins:
+- jekyll-remote-theme
 title: Joshua D Elliott
 description: Website belonging to Dr. Joshua Elliott
